Fix horizontal scroll bug and grids on frontend

--- a/src/pages/datasetDetailPage/datasetDetailPage.css
+++ b/src/pages/datasetDetailPage/datasetDetailPage.css
@@ -111,9 +111,9 @@ ul.breadcrumb li a:hover {
 
 .datasetspace {
   /* padding: 10px; */
+  /* padding: 0.25rem 9999rem; */
   border-bottom: 1px solid #BFD3E1;
-  margin-left: -1000px;
-  width: 10000px;
+  margin: 0 -9999rem;
 }
 
 .aboutContentContainer {
