--- a/src/pages/glossaryPage/glossaryPage.css
+++ b/src/pages/glossaryPage/glossaryPage.css
@@ -53,7 +53,7 @@
     /* border-left: 1px solid lightgray; */
     /* border-right: 1px solid lightgray; */
 }
-.grid{
+.glossaryGrid{
     color: white;
     border-bottom: 1px solid lightgray;
 }
